--- a/plants/templates/plants/index.html
+++ b/plants/templates/plants/index.html
@@ -70,6 +70,11 @@
                         </p>
                       </div>
                     </div>
+
+                    <a href="" class="">
+                      <i class="bi bi-heart"></i>
+                    </a>
+
                   </div>
                 </div>
               </div>
