--- a/plants/static/css/style.css
+++ b/plants/static/css/style.css
@@ -63,19 +63,19 @@ option:checked {
     visibility: visible;
 }
 
-.bi-pencil-square, .bi-heart {
+.bi-pencil-square{
     font-size: 29px;
-    color:rgba(134, 74, 74, 0.8);
+    color:rgb(74, 134, 97, 0.8);
     position: absolute;
     bottom: 0px;
     right: 8px;
 }
 
-.bi-heart {
-    font-size: 29px;
+.fav {
+    font-size: 20px;
     color:rgb(74, 134, 97, 0.8);
     position: absolute;
-    bottom: 0px;
+    bottom: 2px;
     right: 8px;
 }
 
