--- a/plants/templates/plants/fav.html
+++ b/plants/templates/plants/fav.html
@@ -1,13 +1,13 @@
 {% extends 'plants/base.html' %}
 {% load static %}
 
-{% block title %}Каталог растений{% endblock %}
+{% block title %}Избранное{% endblock %}
 
 {% block body %}
   <main>
     <div class="container mt-5 py-5">
       <div class="row">
-        <div class="col-md-12"><h2 class="text-center pt-2 pb-3">Каталог растений</h2></div>
+        <div class="col-md-12"><h2 class="text-center pt-2 pb-3">Избранное</h2></div>
       </div>
 
       <div class="row g-0 pb-3">
