--- a/plants/templates/plants/base.html
+++ b/plants/templates/plants/base.html
@@ -57,16 +57,44 @@
             </li>
           </ul>
           <ul class="navbar-nav">
-            <li class="nav_item ">
-              {% block heart %}<a href="{% url 'adm_all' %}" class="nav-link"><i class="bi bi-heart"></i></a>{% endblock %}
-            </li>
-            <li class="nav_item ">
-              {% block admin %}<a href="{% url 'adm_all' %}" class="nav-link">Вход</a>{% endblock %}
-            </li>
+            {% if user.is_authenticated %}
+              <li class="nav_item ">
+                {% block heart %}<a href="{% url 'fav' %}" class="nav-link"><i class="bi bi-heart"></i></a>{% endblock %}
+              </li>
+              <li class="nav_item ">
+                {% block logout %}<a href="{% url 'logout' %}" class="nav-link">Выход</a>{% endblock %}
+              </li>  
+            {% else %}
+              <li class="nav_item ">
+                {% block admin %}<a href="" class="nav-link" data-bs-toggle="modal" data-bs-target="#loginModal">Вход</a>{% endblock %}
+              </li>
+              <li class="nav_item ">
+                {% block reg %}<a href="" class="nav-link" data-bs-toggle="modal" data-bs-target="#loginModal">Регистрация</a>{% endblock %}
+              </li>
+            {% endif %}
+
+            
           </ul>
         </dsv>
       </div>
     </nav>
+
+    {% include 'plants/login.html' %}
+
+    {% for message in messages %}
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+      {% if message.tags == 'info' %}
+        <script>
+          var m = "{{ message }}";
+          Swal.fire({title: "Требуется авторизация", text: m, icon: "info", confirmButtonColor: "#4a8661cc"});
+        </script>
+      {% elif message.tags == 'error' %}
+        <script>
+          var m = "{{ message }}";
+          Swal.fire({title: "Ошибка входа", text: m, icon: "error", confirmButtonColor: "#4a8661cc"});
+        </script>
+      {% endif %}
+    {% endfor %}
 
     {% block body %}{% endblock %}
 
