--- a/plants/templates/plants/index.html
+++ b/plants/templates/plants/index.html
@@ -12,6 +12,7 @@
           <div class="carousel-caption">
             <h2><a href="#" class="text-light">Суккуленты</a></h2>
             <p>Маленькие и модные</p>
+            <label class="form-label">{{ form.nazvanie.label }}</label>
           </div>
         </div>
         <div class="carousel-item">
