--- a/plants/templates/plants/base.html
+++ b/plants/templates/plants/base.html
@@ -23,6 +23,7 @@
           aria-controls="navbarContent" aria-expanded="false">
           <span class="navbar-toggler-icon"></span>
         </button>
+        <label class="form-label">{{ form.nazvanie.label }}</label>
 
         <div class="collapse navbar-collapse" id="navbarContent">
           <ul class="navbar-nav me-auto">
@@ -74,7 +75,7 @@
                 <a href="" class="nav-link" data-bs-toggle="modal" data-bs-target="#loginModal">Вход</a>
               </li>
               <li class="nav_item ">
-                <a href="" class="nav-link" data-bs-toggle="modal" data-bs-target="#loginModal">Регистрация</a>
+                <a href="" class="nav-link" data-bs-toggle="modal" data-bs-target="#regModal">Регистрация</a>
               </li>
             {% endif %}
 
@@ -85,6 +86,7 @@
     </nav>
 
     {% include 'plants/login.html' %}
+    {% include 'plants/registration.html' %}
 
     {% for message in messages %}
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
