--- a/plants/templates/plants/index.html
+++ b/plants/templates/plants/index.html
@@ -73,12 +73,16 @@
                     </div>
 
                     {% if user.is_authenticated %}
-                      <a href="" class="">
-                        <i class="bi bi-heart fav"></i>
-                      </a>
+                      {% if rastenie in favrastenies %}
+                        <a href="{% url 'fav_add' pk=rastenie.pk %}" class="">
+                          <i class="bi bi-heart-fill fav"></i>
+                        </a>
+                      {% else %}
+                        <a href="{% url 'fav_add' pk=rastenie.pk %}" class="">
+                          <i class="bi bi-heart fav"></i>
+                        </a>
+                      {% endif %}
                     {% endif %}
-                    
-
                   </div>
                 </div>
               </div>
