--- a/plants/templates/plants/fav.html
+++ b/plants/templates/plants/fav.html
@@ -83,9 +83,11 @@
                     </div>
                   </div>
 
-                  <a href="" class="">
-                    <i class="bi bi-heart fav"></i>
-                  </a>
+                  {% if user.is_authenticated %}
+                      <a href="{% url 'fav_add' pk=rastenie.pk %}" class="">
+                        <i class="bi bi-heart-fill fav"></i>
+                      </a>
+                  {% endif %}
                   
                 </div>
               </div>
