--- a/plants/templates/plants/base.html
+++ b/plants/templates/plants/base.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link href="{% static 'css/style.css' %} " rel="stylesheet">
   </head>
   <body>
@@ -23,7 +24,6 @@
           aria-controls="navbarContent" aria-expanded="false">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <label class="form-label">{{ form.nazvanie.label }}</label>
 
         <div class="collapse navbar-collapse" id="navbarContent">
           <ul class="navbar-nav me-auto">
@@ -108,7 +108,7 @@
     <footer class="page-footer font-small mt-5 pt-5"> 
       <div class="footer-copyright text-center py-3 ">© 2023 Валерия Шевченко</div>
     </footer>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>  
   </body>
 </html>
