Ajax добавление в избранное и удаление из него

--- a/plants/static/css/style.css
+++ b/plants/static/css/style.css
@@ -77,6 +77,8 @@ option:checked {
     position: absolute;
     bottom: 2px;
     right: 8px;
+    
+    visibility: visible;
 }
 
 .bi-plus-square {
