Не работает добавление в избранное без перезагрузки при отфильтрованном

--- a/plants/templates/plants/fav.html
+++ b/plants/templates/plants/fav.html
@@ -4,7 +4,7 @@
 {% block title %}Избранное{% endblock %}
 
 {% block body %}
-  <main>
+  <main id="rastlist">
     <div class="container mt-5 py-5">
       <div class="row">
         <div class="col-md-12"><h2 class="text-center pt-2 pb-3">Избранное</h2></div>
