Фильтрация для избранного (сырое

--- a/plants/templates/plants/rastlist.html
+++ b/plants/templates/plants/rastlist.html
@@ -29,9 +29,17 @@
                     </div>
                   </div>
 
-                  <a data-type="plant" id="{{ rastenie.pk }}" data-id="{{ rastenie.pk }}" href="{% url 'fav_add' pk=rastenie.pk%}" class="add-to-fav added-to-fav">
-                    <i class="bi bi-heart-fill fav"></i>
-                  </a>
+                  {% if user.is_authenticated %}
+                    {% if rastenie in favrastenies %}
+                      <a data-type="plant" id="{{ rastenie.pk }}" data-id="{{ rastenie.pk }}" href="{% url 'fav_add' pk=rastenie.pk%}" class="add-to-fav added-to-fav">
+                        <i class="bi bi-heart-fill fav"></i>
+                      </a>
+                    {% else %}
+                      <a data-type="plant" id="{{ rastenie.pk }}" data-id="{{ rastenie.pk }}" href="{% url 'fav_add' pk=rastenie.pk%}" class="add-to-fav">
+                        <i class="bi bi-heart fav"></i>
+                      </a>
+                    {% endif %}
+                  {% endif %}
                   
                 </div>
               </div>
