--- a/plants/templates/plants/all.html
+++ b/plants/templates/plants/all.html
@@ -10,98 +10,10 @@
         <div class="col-md-12"><h2 class="text-center pt-2 pb-3">Каталог растений</h2></div>
       </div>
 
-      <div class="row g-0 pb-3">
-        <div class="card shadow px-2 py-2">
-          <div class="row">
-            <div class="col-12 col-sm-6 col-md-4 pb-3 pb-sm-0">
-              <label class="form-label">Семейство</label>
-              <select class="form-select" aria-label="Default select example">
-                <option selected>Все</option>
-                <option value="1">Аизоновые</option>
-                <option value="2">Акантовые</option>
-                <option value="3">Амариллисовые</option>
-                <option value="4">Ароидные</option>
-                <option value="5">Аспаргусовые</option>
-                <option value="6">Бромелиевые</option>
-                <option value="7">Геснериевые</option>
-                <option value="8">Кактусы</option>
-                <option value="9">Кутровые</option>
-                <option value="10">Марантовые</option>
-                <option value="11">Орхидеи</option>
-                <option value="12">Пальмы</option>
-                <option value="13">Папоротники</option>
-                <option value="14">Суккуленты</option>
-              </select>
-            </div>
+      {% include 'plants/searchform.html' %}
 
-            <div class="col-12 col-sm-6 col-md-4 pb-3 pb-md-0">
-              <label class="form-label">Группа</label>
-              <select class="form-select" aria-label="Default select example">
-                <option selected class="opt">Все</option>
-                <option value="1">Декоративно-лиственные</option>
-                <option value="2">Декоративно-цветущие</option>
-              </select>
-            </div>
-
-            <div class="col-12 col-md-4 align-self-end">
-              <div class="d-grid gap-2 d-md-flex">
-                <button type="button" class="btn green-btn col">Применить</button>
-                <button type="button" class="btn light-btn col">Сбросить</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        {% for rastenie in rastenies %}
-          <div class="col-lg-4 col-sm-6 pb-3">
-            <div class="card shadow h-100">
-              <div class="row g-0 h-100">
-                <div class="col-6 col-sm-5">
-                  <a href="{% url 'show' pk=rastenie.pk %}">
-                    {% if rastenie.izobrazhenie %}
-                      <img src="plants/uploads/{{ rastenie.izobrazhenie }}" class="card-img img-fluid rounded-start" alt="" />
-                    {% else %}
-                      <img src="{% static 'img//plant.jpg' %}" class="card-img img-fluid rounded-start" alt="" />
-                    {% endif %}
-                  </a>
-                </div>
-                <div class="col-6 col-sm-7">
-                  <div class="card-body d-flex flex-colmn">
-                    <div class="h-100">
-                      <p class="text-uppercase font-small mt-1 mb-3">
-                        <a href="#" class="text-muted">
-                          {% if rastenie.semeystvo %}
-                            {{rastenie.semeystvo}}
-                          {% endif%}
-                        </a>
-                      </p>
-                      <p class="card-title mb-2">
-                        <a href="{% url 'show' pk=rastenie.pk %}" class="text-dark">{{rastenie.nazvanie}}</a>
-                      </p>
-                    </div>
-                  </div>
-
-                  {% if user.is_authenticated %}
-                    {% if rastenie in favrastenies %}
-                      <a data-type="plant" id="{{ rastenie.pk }}" data-id="{{ rastenie.pk }}" href="{% url 'fav_add' pk=rastenie.pk%}" class="add-to-fav added-to-fav">
-                        <i class="bi bi-heart-fill fav"></i>
-                      </a>
-                    {% else %}
-                      <a data-type="plant" id="{{ rastenie.pk }}" data-id="{{ rastenie.pk }}" href="{% url 'fav_add' pk=rastenie.pk%}" class="add-to-fav">
-                        <i class="bi bi-heart fav"></i>
-                      </a>
-                    {% endif %}
-                  {% endif %}
-                  
-                </div>
-              </div>
-            </div>
-          </div>
-        {% empty %}
-          <div class="col-md-12"><h3 class="text-center pt-4 pb-3" style="height: 400px;">Растения не найдены</h3></div>
-        {% endfor %}
+      <div class="row" id="f-filter">
+        {% include 'plants/rastlist.html' %}
       </div>
     </div>
   </main>
