--- a/plants/templates/plants/searchform.html
+++ b/plants/templates/plants/searchform.html
@@ -3,12 +3,12 @@
     <div class="row">
       <div class="col-12 col-sm-6 col-md-4 pb-3 pb-sm-0">
         <label class="form-label">Семейство</label>
-        {{form.semeystvos}}
+        {{sform.semeystvos}}
       </div>
 
       <div class="col-12 col-sm-6 col-md-4 pb-3 pb-md-0">
         <label class="form-label">Группа</label>
-        {{form.gruppis}}
+        {{sform.gruppis}}
       </div>
   
       <div class="col-12 col-md-4 align-self-end">
